@@ -6,6 +6,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.BeanUtils;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -112,7 +113,7 @@ public class PostServiceImpl implements PostService {
 	}
 	
 	private List<PostDTO> convertListEntityToDTO(List<Post> posts) {
-		return posts.stream().map(post -> convertEntityToDTO(post)).toList();
+		return posts.stream().map(post -> convertEntityToDTO(post)).collect(Collectors.toList());
 	}
 	
 	private PostDTO convertEntityToDTO(Post post) {
